# CoupledQuantumSystems

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
CoupledQuantumSystems/: IFQ.py  __init__.py  checkpoint.py  drive.py  drive_symbo.py  evo.py  evo_parallel.py  evo_parrallel.py  frame.py  mcsolve_on_node.py  mcsolve_utils.py  noise.py  optimize.py  perturb.py  pulse_shapes_symbo.py  qobj_manip.py  system_gpu.py  systems.py  test_drive_symbo.py  utils_jax.py  utils_jax_evo.py  visualization.py
CoupledQuantumSystems/dynamics/: __init__.py  drive.py  drive_symbo.py  evo.py  evo_parallel.py  pulse_shapes_symbo.py
CoupledQuantumSystems/garbage/: frame.py  utils_jax.py  utils_qiskit_dynamics.py
CoupledQuantumSystems/perturb/: BCH_dresser.py  __init__.py  dresser_base.py  energy_index.py  perturbation_dresser.py
CoupledQuantumSystems/systems/: IFQ.py  __init__.py  coupledsystems.py  quantumsystem.py  singlequbitsystems.py  systems.py
CoupledQuantumSystems/tests/: __init__.py  test_singlequbitsystem.py
Examples/: demo_dynamiqs_gpu_mesolve_checkpoint.py  demo_dynamiqs_gpu_sesolve.ipynb  demo_initialize_symbolic_pulse_using_non_symbolic_pulse_function.ipynb  demo_symbolic_pulse_shape_compared_to_qutip.ipynb  demo_use_tranditional_pulse_function_in_qiskit_dynamics.ipynb
Notebooks/: compare_qutip_to_qiskit_dynamics_with_symbolic_pulse.ipynb  demo_branch_assignment.ipynb  try_branch_assignment.ipynb
docs/: requirements.txt
docs/source/: conf.py  (+1 more)
tests/: test_drive_symbo.py  test_singlequbitsystem.py  test_transmon_readout_with_dynamiqs_gpu.py  test_vectorization.py
(+17 files in other folders)
